--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
+    "start": "set NODE_ENV=production&&electron .",
+    "startDev": "set NODE_ENV=development&&electron .",
     "build": "electron-packager . --electron-version:25.1.1 --out winx64 --overwrite --appname Node_ElectronDemo --icon ./icon.ico"
   },
   "author": "Herman Ras",
