--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "main.js",
   "scripts": {
     "start": "set NODE_ENV=production&&electron .",
-    "startDev": "set NODE_ENV=development&&electron .",
+    "startDev": "set NODE_ENV=development&&electronmon .",
     "build": "electron-packager . --electron-version:25.1.1 --out winx64 --overwrite --appname Node_ElectronDemo --icon ./icon.ico"
   },
   "author": "Herman Ras",
