--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Herman Ras",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^25.1.1"
+    "electron": "^25.1.1",
+    "toastify-js": "^1.12.0"
   }
 }
